adjusting widgets titles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,13 @@
   <app-weather-widget widget="wether"></app-weather-widget>
   <app-weather-widget widget="velocity"></app-weather-widget>
   -->
-  <app-widget-content>
+  <app-widget-content title="Weather">
     <app-weather-widget></app-weather-widget>
   </app-widget-content>
-  <app-widget-content>
+  <app-widget-content title="Velocity">
     <app-velocity-widget></app-velocity-widget>
   </app-widget-content>
-  <app-widget-content>
+  <app-widget-content title="Anything">
     <p>Content is comming...</p>
   </app-widget-content>
 </main>
