--- a/src/app/widgets/widget-content/widget-content.component.html
+++ b/src/app/widgets/widget-content/widget-content.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h1>Weather</h1>
+  <h1>{{title}}</h1>
   <button mat-stroked-button (click)="onExportJson()">
     Export as JSON
   </button>
