solving dependency inversion principle violation by adding an interface Student, and decoupling teacher to a certain student, now is able to receive any student

--- a/src/app/school/teacher/teacher.component.html
+++ b/src/app/school/teacher/teacher.component.html
@@ -1,2 +1,4 @@
 <h1>attendance:</h1>
-<h4>{{student | json}}</h4>
+<div *ngIf="students">
+  <h4 *ngFor="let student of students">{{student | json}}</h4>
+</div>
